# blackjackai

./: Makefile  README.md  requirements.txt
agents/: dqn_rainbow.py  eval.py  gpu_utils.py  replay.py  utils_device.py
blackjack/: __init__.py
blackjack/rl/: __init__.py  environment.py  training.py
blackjack_env/: __init__.py  basic_strategy.py  count_helpers.py  env.py  masking.py  observation.py  pyproject.toml  setup.cfg  utils.py
blackjackai_rl/: __init__.py  agents.py  counting.py  device.py  env.py  evaluation.py  hand_logger.py  masking.py  networks.py  observation.py  policies.py  replay.py  strategy.py  tests.py  training.py  utils.py
notebooks/: Blackjack_RL_Mega_Notebook.ipynb  blackjack_ai_colab.ipynb  blackjack_ai_hyper_notebook.ipynb  blackjack_ai_train_eval.ipynb  blackjack_rainbow.ipynb
planning/: rainbow_stabilization_plan.md
tests/: test_device_and_step.py  test_env_reset_step.py  test_loss_nonzero_smoke.py  test_masks.py  test_notebook_nbmake.py  test_observation.py  test_observation_nonzero.py  test_penetration.py  test_rewards.py  test_training_smoke.py  test_training_step_no_inplace.py
