[metadata]
name = blackjack-env
version = 0.1.0

[options]
packages = find:
install_requires =
    numpy
    pandas
    torch
    matplotlib

[tool:pytest]
addopts = -ra

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "S", "N", "A", "C4", "SIM", "BLE", "PL"]
ignore = ["S101", "SIM115"]
